--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
   test-from-source:
     runs-on: ubuntu-latest
     steps:
-      - uses: kyanny/hello-world-docker-action@latest
+      - uses: kyanny/hello-world-docker-action@0.1.1
 
   test-from-image:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker://ghcr.io/kyanny/hello-world-docker-action:latest
+      - uses: docker://ghcr.io/kyanny/hello-world-docker-action:0.1.1
